refactor: implement new modular domain-driven architecture for UltraShop with expanded shop types and persistence systems